# AnimeGamesLinux

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release.yml
src/: config.rs  get_wine.rs  main.rs  proxy.rs  run.rs  umu_run.rs  utils.rs
src/game/: genshin.rs  starrail.rs
