[package]
name = "anime-games-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.13.0"

hudsucker = "0.19.2"
rcgen = { version = "0.9", features = ["x509-parser"] }
rustls-pemfile = "1.0.0"
tokio-rustls = "0.23.0"
tokio-tungstenite = "0.17.0"
tokio = { version = "1.20.4", features = ["signal", "macros", "rt-multi-thread", "fs", "process"] }
os_type = "2.6"
which = "4.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
dialoguer = "0.10"

openssl = "0.10"
hex = "0.4"
tempfile = "3.6"
zip = "0.6"
libc = "0.2.177"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
